* As a user I can access accounts from an ENV variable
* As a user I can compile and run PyTeal Files