@@ -21,6 +21,55 @@ loggingEnabled?: boolean;
 initialDate?: string;
 ```
 
+## Credentials
+
+You can specify Algod Credentials in network object or you can load it from ENV.
+To load it from ENV:
+
+- Method 1
+
+  - To add `ALGOD_ADDR` and `ALGOD_TOKEN` in env, you can use the following commands in terminal: 
+
+        export ALGOD_ADDR = "127.0.0.1:8080"
+        export ALGOD_TOKEN = "algod_token"
+
+  - To load algod credentials from env in config, you can use:
+
+        let algodCred = algodCredentialsFromEnv();
+
+- Method 2
+
+  - To add `$ALGORAND_DATA` in env, you can use the following command in terminal: 
+
+          export $ALGORAND_DATA = "content_of/algorand-node-data"
+
+  - To load algod credentials from env in config, you can use:
+
+          let algodCred = algodCredentialsFromEnv();
+
+Similarly for KMD credentials you can either specify credentials in KMD object or load it from ENV.
+To load it from ENV:
+
+- Method 1
+
+  - To add `KMD_ADDR` and `KMD_TOKEN` in env, you can use the following commands in terminal: 
+
+        export KMD_ADDR = "127.0.0.1:8080"
+        export KMD_TOKEN = "kmd_token"
+
+  - To load kmd credentials from env in config, you can use:
+
+        let kmdCred = KMDCredentialsFromEnv();
+
+- Method 2
+
+  - To add `$KMD_DATA` in env, you can use the following command in terminal: 
+
+          export $KMD_DATA = "content_of/kmd-data"
+
+  - To load kmd credentials from env in config, you can use:
+
+          let kmdCred = KMDCredentialsFromEnv();
 
 ## Accounts
 
